# mini-neural-network

./: Cargo.toml  README.md
examples/: housing.rs  iris.rs
src/: activation_functions.rs  identity_layer.rs  layer.rs  lib.rs  linear_layer.rs  loss_functions.rs  loss_layer.rs  main.rs  multilayer_network.rs  preprocessor.rs  regressor.rs  trainer.rs  utils.rs
src/layers/: activation_layer.rs  cross_entropy_loss_layer.rs  identity_layer.rs  layer.rs  linear_layer.rs  loss_layer.rs  mod.rs  mse_loss_layer.rs  relu_layer.rs  sigmoid_layer.rs
src/layers/activation_layers/: activation_layer.rs  identity_layer.rs  mod.rs  relu_layer.rs  sigmoid_layer.rs
src/layers/loss_layers/: cross_entropy_loss_layer.rs  loss_layer.rs  mod.rs  mse_loss_layer.rs
src/math_functions/: activation_functions.rs  loss_functions.rs  math_func.rs  mod.rs
