[package]
name = "mini_neural_network"
version = "0.1.0"
edition = "2024"

[dependencies]
blas = "0.23.0"
blas-src = { version = "0.11.1", features = ["accelerate"] }
ndarray = { version = "0.16.1", features = ["blas", "rayon"] }
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
polars = { version = "0.46.0", features = [
    "interpolate",
    "lazy",
    "ndarray",
    "polars-io",
    "polars-ops",
    "to_dummies",
] }
rand = "0.9.0"

[dev-dependencies]
csv = "1.3.1"
ndarray-csv = "0.5.3"
